[tool.poetry]
name = "mdk_backup"
version = "0.1.0"
description = ""
authors = ["Jimmy Girardet <ijkl@netc.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pony = "^0.7.6"
pymysql = "^0.9.2"

[tool.poetry.dev-dependencies]
bpython = "^0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
